--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -1,27 +1,4 @@
 
-p {
-    white-space: pre-wrap;
-}
-.contracted {
-    height: 250px;
-    overflow: hidden;
-}
-.about button.more {
-    background: transparent;
-    border: 0;
-    color: #008489;
-    padding: 0;
-    font-size: 17px;
-    font-weight: bold;
-}
-.about button.more:hover,
-.about button.more:focus,
-.about button.more:active {
-    text-decoration: underline;
-    outline: none;
-}
-
-
 .carousel-control {
     padding: 1rem;
     color: #ffffff;
@@ -157,3 +134,34 @@ hr {
         flex: 0 0 100%;
 }
 }
+
+p {
+    white-space: pre-wrap;
+}
+.contracted {
+    height: 250px;
+    overflow: hidden;
+}
+.about button.more {
+    background: transparent;
+    border: 0;
+    color: #008489;
+    padding: 0;
+    font-size: 17px;
+    font-weight: bold;
+}
+.about button.more:hover,
+.about button.more:focus,
+.about button.more:active {
+    text-decoration: underline;
+    outline: none;
+}
+
+
+.about {
+    margin: 2em 0;
+}
+.about h3 {
+    font-size: 22px;
+}
+
