--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -1,4 +1,25 @@
 
+#footer {
+    margin-bottom: 3em;
+}
+#footer .icon {
+    height: 23px;
+    display: inline-block;
+    margin-bottom: -6px;
+}
+.hr {
+    border-top: 1px solid #dce0e0;
+    margin: 3em 0;
+}
+#footer p {
+    font-size: 15px;
+    color: #767676 !important;
+    display: flex;
+}
+#footer p img {
+    padding-right: 6px;
+}
+
 #toolbar {
     border-bottom: 1px solid #e4e4e4;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
@@ -223,15 +244,6 @@ p {
 }
 
 
-.home-container {
-    margin: 0 auto;
-    padding: 0 25px;
-}
-@media (min-width: 1131px) {
-.home-container {
-        width: 1080px;
-}
-}
 .listing-summary-group {
     padding-bottom: 20px;
 }
