--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -251,11 +251,31 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    overflow: hidden;
+    transition: transform 0.5s;
 }
 .listing-summaries > .listing-summary {
-    margin-right: 15px;
+    margin-right:15px;
 }
 .listing-summaries > .listing-summary:last-child {
-    margin-right: 0;
+    margin-right:0;
 }
+.listing-carousel {
+    position: relative;
+}
+.listing-carousel .controls {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: calc(50% - 45px);
+    left: -45px;
+    width: calc(100% + 90px);
+}
+.listing-carousel .controls .carousel-control {
+    color: #c5c5c5;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+.listing-summaries-wrapper {
+    overflow: hidden;
+}
+
