--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -21,6 +21,8 @@
 }
 
 #toolbar {
+    display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid #e4e4e4;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
@@ -40,6 +42,33 @@
     align-items: center;
     text-decoration: none;
 }
+#toolbar ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 0 24px 0 0;
+    margin: 0;
+}
+@media (max-width: 373px){
+#toolbar ul {
+        padding-right: 12px;
+}
+}
+#toolbar ul li a {
+    text-decoration: none;
+    line-height: 1;
+    color: inherit;
+    font-size: 13px;
+    padding-bottom: 8px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+}
+#toolbar ul li a:hover {
+    border-bottom: 2px solid #484848;
+    padding-bottom: 6px;
+}
+
+
 
 .carousel-control {
     padding: 1rem;
@@ -112,35 +141,6 @@ body.modal-open {
     line-height: 1;
 }
 
-.header {
-    height: 320px;
-}
-.header .header-img {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-    background-color: #f5f5f5;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-}
-.header .header-img button {
-    font-size: 14px;
-    padding: 7px 18px;
-    color: #484848;
-    line-height: 1.43;
-    background: #ffffff;
-    font-weight: bold;
-    border-radius: 4px;
-    border: 1px solid #c4c4c4;
-}
-.header .header-img button.view-photos {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-}
-
-
 hr {
     border: 0;
     border-top: 1px solid #dce0e0;
@@ -177,6 +177,54 @@ hr {
 }
 }
 
+.listing-save {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+.listing-save .fa-heart {
+    color: #ff5a5f;
+}
+.listing-save .fa-heart-o {
+    color: #fff;
+}
+.listing-save i {
+    padding-right: 4px;
+}
+.listing-save button .fa-heart-o {
+    color: #808080;
+}
+
+.header {
+    height: 320px;
+}
+.header .header-img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-color: #f5f5f5;
+    height: 100%;
+    cursor: pointer;
+    position: relative;
+}
+.header .header-img button {
+    font-size: 14px;
+    padding: 7px 18px;
+    color: #484848;
+    line-height: 1.43;
+    background: #ffffff;
+    font-weight: bold;
+    border-radius: 4px;
+    border: 1px solid #c4c4c4;
+}
+.header .header-img button.view-photos {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+}
+
+
 p {
     white-space: pre-wrap;
 }
@@ -200,6 +248,17 @@ p {
 }
 
 
+.heading {
+    margin-bottom: 2em;
+}
+.heading h1 {
+    font-size: 32px;
+    font-weight: 700;
+}
+.heading p {
+    font-size: 15px;
+    color: #767676;
+}
 .about {
     margin: 2em 0;
 }
@@ -207,9 +266,9 @@ p {
     font-size: 22px;
 }
 
-
 .listing-summary {
     flex: 0 0 auto;
+    position: relative;
 }
 .listing-summary a {
     text-decoration: none;
@@ -241,6 +300,12 @@ p {
 .listing-summary .info.address {
     font-size: 14px;
     line-height: 18px;
+}
+@media (max-width: 400px) {
+.listing-summary .listing-save {
+        left: 15px;
+        right: auto;
+}
 }
 
 
@@ -279,3 +344,16 @@ p {
     overflow: hidden;
 }
 
+
+#saved .listing-summaries {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    overflow: hidden;
+}
+#saved .listing-summaries .listing-summary {
+    padding-bottom: 30px;
+}
+.listing-summaries > .listing-summary {
+    margin-right: 15px;
+}
