--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,8 +43,20 @@ body {
   color: #767676;
 }
 
+.login-container {
+    margin: 0 auto;
+    padding: 0 12px;
+}
 
+@media (min-width: 374px) {
+    .login-container {
+        width: 350px;
+    }
+}
 
+input [type=text] {
+    -webkit-appearance: none;
+}
 
 button {
   text-align: center;
